# Madaniyat-Arxiv

./: .env.example  CLAUDE.md  Makefile  docker-compose.yml  login.html  skills-lock.json
backend/: .dockerignore  .gitignore  Dockerfile  create_admin.py  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 05215d4620e6_init.py  594827a57646_add_archive_number_to_documents.py  bc460598793c_remove_target_column_from_documents.py  bcda4cfe30ca_add_document_attachments.py  cd2fe695c369_add_person_and_tenure_models.py  e3233e7efaab_revert_to_single_year.py  e38e0f5634ef_category_year_direct_and_default_fields.py  f252e0f937a1_category_multi_year.py
backend/src/api/: dependencies.py  main.py
backend/src/api/middleware/: auth.py
backend/src/api/routes/: auth_routes.py  category_routes.py  document_routes.py  person_routes.py  user_routes.py  year_routes.py
backend/src/api/schemas/: category.py  document.py  person.py  user.py  year.py
backend/src/application/category/: commands.py  handlers.py  queries.py
backend/src/application/document/: commands.py  handlers.py  queries.py
backend/src/application/person/: commands.py  handlers.py  queries.py
backend/src/application/user/: commands.py  handlers.py  queries.py
backend/src/application/year/: commands.py  handlers.py  queries.py
backend/src/domain/category/: entity.py  repository.py  value_objects.py
backend/src/domain/document/: entity.py  errors.py  repository.py  value_objects.py
backend/src/domain/person/: entity.py  (+1 more)
backend/src/infrastructure/: config.py
(+72 files in other folders)
